[package]
name = "cronjob"
version = "0.1.0"
authors = ["Richard <mokua83ke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
env_logger = "0.7.1"
futures = "0.3.5"
kube = {  version = "0.42.0", default-features = false, features = ["derive", "native-tls"] }
kube-derive = "0.42.0"
kube-runtime = {  version = "0.42.0", default-features = false }
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
log = "0.4.11"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
tokio = { version = "1.8.4", features = ["full"] }
color-eyre = "0.5.1"
snafu = { version = "0.6.8", features = ["backtraces"] }
# Some Api::delete methods use Either
either = "1.6.0"
# Some configuration tweaking require reqwest atm
#reqwest = { version = "0.10.8", default-features = false, features = ["json", "gzip", "stream"] }
